kotlin-parser/src/test/semlang/validatorTests/fail/integerLiteral1.sem
function myStuff.myFunction(): Integer {
  return Integer.""
}
